--- a/composer.json
+++ b/composer.json
@@ -19,10 +19,11 @@
     ],
     "license": "MIT",
     "require": {
-        "php" : ">=7.0",
-        "illuminate/support": "~5.4.0",
+        "php": ">=7.0",
+        "composer/composer": "^1.5",
         "illuminate/console": "~5.4.0",
-        "illuminate/notifications": "~5.4.0"
+        "illuminate/notifications": "~5.4.0",
+        "illuminate/support": "~5.4.0"
     },
     "autoload": {
         "psr-4": {
