--- a/composer.json
+++ b/composer.json
@@ -20,10 +20,10 @@
     "license": "MIT",
     "require": {
         "php": ">=7.0",
-        "composer/composer": "^1.5",
-        "illuminate/console": "~5.4 || ~5.5",
-        "illuminate/notifications": "~5.4 || ~5.5",
-        "illuminate/support": "~5.4 || ~5.5"
+        "composer/composer": "~5.4.0 <5.6",
+        "illuminate/console": "~5.4.0 <5.6",
+        "illuminate/notifications": "~5.4.0 <5.6",
+        "illuminate/support": "~5.4.0 <5.6"
     },
     "autoload": {
         "psr-4": {
