--- a/composer.json
+++ b/composer.json
@@ -14,16 +14,20 @@
 		"name": "Cesar Garcia",
 		"email": "cesargb@gmail.com",
 		"homepage": "https://github.com/cesargb",
-        	"role": "Developer"
+        "role": "Developer"
 	}
     ],
     "license": "MIT",
     "require": {
         "php": ">=7.0",
-        "composer/composer": "~5.4.0 <5.6",
+        "composer/composer": "^1.5",
         "illuminate/console": "~5.4.0 <5.6",
         "illuminate/notifications": "~5.4.0 <5.6",
         "illuminate/support": "~5.4.0 <5.6"
+    },
+    "require-dev": {
+        "orchestra/testbench": "~3.4.2",
+        "phpunit/phpunit" : "^6.0"
     },
     "autoload": {
         "psr-4": {
@@ -32,6 +36,14 @@
     },
     "suggest": {
         "guzzlehttp/guzzle": "Allows notifications to be sent via Slack"
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Cesargb\\Update\\Tests\\": "tests"
+        }
+    },
+    "scripts": {
+        "test": "phpunit"
     },
     "config": {
         "sort-packages": true
