--- a/composer.json
+++ b/composer.json
@@ -14,16 +14,16 @@
 		"name": "Cesar Garcia",
 		"email": "cesargb@gmail.com",
 		"homepage": "https://github.com/cesargb",
-        "role": "Developer"
+        	"role": "Developer"
 	}
     ],
     "license": "MIT",
     "require": {
         "php": ">=7.0",
         "composer/composer": "^1.5",
-        "illuminate/console": "~5.4.0 <5.6",
-        "illuminate/notifications": "~5.4.0 <5.6",
-        "illuminate/support": "~5.4.0 <5.6"
+        "illuminate/console": "~5.4.0 || ~5.5.0",
+        "illuminate/notifications": "~5.4.0 || ~5.5.0",
+        "illuminate/support": "~5.4.0 || ~5.5.0"
     },
     "require-dev": {
         "orchestra/testbench": "~3.4.2",
